--- a/CSS/base.css
+++ b/CSS/base.css
@@ -47,8 +47,8 @@ table {
 	border-spacing: 0;
 }
 
-a:link ,a:visited ,a:active ,a:hover {color: inherit; text-decoration: none;}
-
+a:link, a:visited, a:hover, a:active {color: inherit; text-decoration: none;}
+img {vertical-align: bottom;}
 
 /*********************************  Base ***********************************/
 .clearfix::after {
@@ -57,5 +57,5 @@ a:link ,a:visited ,a:active ,a:hover {color: inherit; text-decoration: none;}
 	clear: both;
 }
 .img {width: 100%;}
-.imgx {max-width: 100%; width: 100%;} 
+.imgx {max-width: 100%;} 
 
