--- a/CSS/index.css
+++ b/CSS/index.css
@@ -21,30 +21,219 @@ background: #333 url('../img/common.png') left top/cover;
 
 @import './lge-font.css';
 
-html, body {font-family: 'LGSmHaR'; font-size: 14px; letter-spacing: -1px;}
+html, body {font-family: 'LGSmHaR'; font-size: 14px; letter-spacing: -1px; height: 10000px;}
+.wrapper {max-width: 1600px; margin: auto; padding: 0 .5rem; }
+.wrapper2 {max-width: 1300px; margin: auto; padding: 0 .5rem;}
+.wrapper3 {max-width: 1414px; margin: auto; padding: 0 .5rem; overflow: hidden;}
 
-.wrapper {max-width: 1600px; margin: auto; padding: 0 30px;}
+.disp-table {display: table;}
+.disp-cell {display: table-cell; text-align: center; vertical-align: middle;}
+.pink {color: #ae1a4a;}
+.angle-rt::after {content: '＞'; display: inline-block;}
+.main-wrapper .pager-wrapper {text-align: center; margin: 2em 0;}
+.main-wrapper .pager-wrapper > a { vertical-align: middle; margin: 0 0.25em; color: #ccc; transition: all 0.5s;}
+.main-wrapper .pager-wrapper > a.pager {display:inline-block; width: 18px; height: 18px; border: 2px solid #ccc; border-radius: 9px; }
+.main-wrapper .pager-wrapper > a.pager.active {border: 2px solid #ae1a4a; width: 28px; background-color: #ae1a4a;}
+.main-wrapper .pager-wrapper > a.bt-play.active {color: #ae1a4a;}
+.main-wrapper .pager-wrapper > a.bt-pause.active {color: #ae1a4a;}
 
+.best-wrapper > .slide-wrapper > .swiper-pagination {width: 100%; text-align: center; margin-top: 24px;}
+.best-wrapper > .slide-wrapper > .swiper-pagination > .swiper-pagination-bullet {width: 18px; height: 18px; margin: 2px; outline: none; background-color: transparent; border: 2px solid #ccc; opacity: 1; border-radius: 9px; transition: all 0.5s;}
+.best-wrapper > .slide-wrapper > .swiper-pagination > .swiper-pagination-bullet-active {background-color: #ae1a4a; border-color: #ae1a4a; width: 28px;}
 /***************** header-wrapper ******************/
+
+
 .header-wrapper {}
-	.header-wrapper .top-wrapper {background-color: #333; padding: 20px 0 8px 0;}
-
-		.top-wrapper ul.top-wrap {float: right; padding: 6px 16px; background-color: #ae1a4a; border-radius: 13px;}
+	.top-wrapper {background-color: #333; padding: 1.5em 0 .625em 0; display: none;}
+		.top-wrapper ul.top-wrap {float: right; padding: .5em .875em; background-color: #ae1a4a; border-radius: 1.25em;}
 			.top-wrapper ul.top-wrap li{ float: left; color: #f8f8f8;}
-			.top-wrapper ul.top-wrap li:nth-child(2){margin: 0 12px; opacity: 0.5;}
+			.top-wrapper ul.top-wrap li:nth-child(2){margin: 0 .875em; opacity: 0.5;}
 
-	.header-wrapper .navi-wrapper {background-color: #333; position: relative;}
-		.navi-wrapper .logo {float: left; width: 164px; height: 43px; background: url('../img/Common.png');}
-			.navi-wrapper .logo a {display: inline-block; width: 100%; height: 100%;}
+	.navi-wrapper {background-color: #333; position: relative; z-index: 3; padding-top: 0.5em;}
+	.navi-wrapper .logo {float: left; width: 164px; height: 43px; background: url('../img/Common.png');}
+		.navi-wrapper .logo a {display: inline-block; width: 100%; height: 100%;}
+		.navi-wrapper .navi-wrap {float: right; color: #f8f8f8; font-size: 1.25rem; display: none;}
+		.navi-wrapper .mb-navi-wrap {float: right;  color: #f8f8f8; font-size: 1.75rem; padding: 0.5em 0 .75em 0; cursor: pointer;}
+		.navi-wrapper .mb-navi-wrap > a  {margin-left: 0.5em; vertical-align: middle;}
+		.navi-wrapper .mb-navi-wrap > a:not(:last-child)  {font-size: .75em;}
+		.navi-wrapper .navi{float: left; padding: 0.875em 0.75em 1.75em 0.75em; height: 63px;}
+		.navi-wrapper .navi:hover {background-color: #ccc;}
+		.navi-wrapper .navi:hover > a {color: #333; }
+		.navi-wrapper .navi:hover > .sub-wrapper { z-index: 2; height: 300px;}
+		.navi-wrapper .navi:last-child > span {opacity: .5;}
 
-		.navi-wrapper .navi-wrap {float: right; color: #f8f8f8; font-size: 18px;}
-		.navi-wrapper .navi-wrap .navi{float: left; padding: 16px 14px 30px 14px; height: 66px;}
-		.navi-wrapper .navi-wrap .sub-wrap {position: absolute; top: 66px; left: 0; height : 0; width: 100%; background-image: linear-gradient(#ccc, #f1f1f1); transition: height 0.35s; overflow: hidden; font-size: 200px; z-index: 1;}
-		.navi-wrapper .navi-wrap .navi:hover {background-color: #ccc;}
-		.navi-wrapper .navi-wrap .navi:hover >a{color: #333; }
-		.navi-wrapper .navi-wrap .navi:hover > .sub-wrap { z-index: 2; height: 300px; box-shadow: 0  	6px 6px rgba(0, 0, 0, 0.6);}
 
-			.navi-wrapper .navi-wrap .navi:last-child > span {opacity: .5;}
+		.sub-wrapper {position: absolute; top: 63px; left: 0; height : 0; width: 100%; background-image: linear-gradient(#ccc, #f1f1f1); transition: height 0.35s; overflow: hidden; z-index: 1;  box-shadow: 0  	6px 6px rgba(0, 0, 0, 0.6);}
+		.sub-wrapper > .wrapper2 {height: 100%; padding: 1.5% 0;}
+		.sub-wrapper > .wrapper2 > div {float: left; height: 100%; color: #333;}
+		.sub-wrapper > .wrapper2 > div.sub-title {width: 25%; text-align: center;}
+		.sub-wrapper > .wrapper2 > div.sub-wrap { width: 75%;}
 
-	.header-wrapper .navi-wrapper2 {background-color: #ae1a4a;}
-		.navi-wrapper2 
+		
+		.sub-wrapper .sub-title h2 {font-size: 0.875em; line-height: 1.75;}
+		.sub-wrapper .sub-title h2 span {font-size: 1.25em; color: #ae1a4a;}
+		.sub-wrapper .sub-title:hover a {text-decoration: underline;}
+		
+		.sub-wrapper .sub-wrap > div {border-left: 1px solid #bbb; float: left; height: 100%; padding: 0 1.25%;}
+		.sub-wrapper .sub-signature > div {width: 33.3333%}
+		.sub-wrapper .sub-tv > div {width: 25%;}
+		.sub-wrapper .sub-gram > div {width: 25%;}
+		.sub-wrapper .sub-kitchen > div {width: 20%;}
+		
+
+		.sub-wrapper .sub-navi {padding: 0.75em 0;}
+		.sub-wrapper .sub-navi:first-child  {padding: 0 0 0.75em 0;}
+		.sub-wrapper .sub-navi::after {display: inline-block; content: '＞'; color: #ae1a4a; padding-left: 0.25em;}
+		.sub-wrapper .sub-bookmark {margin: 1em 0;}
+		.sub-wrapper .sub-bookmark::after {display: inline-block; content: ' '; margin-left: 0.5em; width: 13px; height: 18px; 	
+			background: url('../img/common.png') no-repeat 0 -50px; vertical-align: bottom;}
+		.sub-wrapper .sub-mt {margin: 1em 0;}
+
+		.sub-wrapper .sub-prd {font-size: 0.8em; padding: 0.25em 0;}
+		.sub-wrapper .sub-prd a:hover {text-decoration: underline;}
+		.sub-wrapper .sub-prd > ul {padding: 0.5em 0;}
+		.sub-wrapper .sub-prd > ul >.prd {font-size: 1.05em; color: #121212; float: left;}
+		.sub-wrapper .sub-prd > ul >.prd::before {display: inline-block; content: '·'; padding: 0 0.25em 0 0.75em;}
+		
+
+	.navi-wrapper2 {background-color: #ae1a4a; color: #f9f9f9;}
+	.navi-wrapper2 .icon-wrap {float: right; text-align: center;}
+	.navi-wrapper2 .icon-wrap > .icon {display: inline-block; height: 32px; line-height: 32px; margin: 0.325em; }
+	.navi-wrapper2 .icon-wrap > .icon:nth-child(4) {margin-right: 1em;}
+	.navi-wrapper2 .icon-wrap img {vertical-align: middle; margin-right: 0.25em; width: 18px;}
+	.navi-wrapper2 .icon-wrap span {font-weight: bold; margin-right: 0.25em;}
+
+
+	/******************** main-wrapper ********************/
+
+	.main-wrapper{max-width: 1920px; margin: auto;}
+	.main-wrapper .slide { padding: 10% 15%;; background-size: cover; background-repeat: no-repeat; background-position: 70% center; min-height: 50vh;}
+.main-wrapper .slide:nth-child(1) {background-image: url('../img/main01.jpg');}
+.main-wrapper .slide:nth-child(2) {background-image: url('../img/main02.jpg');}
+.main-wrapper .slide:nth-child(3) {background-image: url('../img/main03.jpg');}
+.main-wrapper .slide:nth-child(4) {background-image: url('../img/main04.jpg');}
+.main-wrapper .slide:nth-child(5) {background-image: url('../img/main05.jpg');}
+.main-wrapper .slide:nth-child(6) {background-image: url('../img/main06.jpg');}
+.main-wrapper .slide:nth-child(7) {background-image: url('../img/main07.jpg');}
+.main-wrapper .slide:nth-child(8) {background-image: url('../img/main08.jpg');}
+.main-wrapper .slide:nth-child(9) {background-image: url('../img/main09.jpg');}
+.main-wrapper .slide:nth-child(10) {background-image: url('../img/main10.jpg');}
+
+	.main-wrapper .slide > .content { font-size: 1.5em; }
+	.main-wrapper .slide > .content > .slogan { padding: 1em 0; transition: all 1s; line-height: 1.25;}
+	.main-wrapper .slide > .content > .slogan > br { display: block;}
+	.main-wrapper .slide > .content > .brand {padding-bottom: 1em; transition: all 1s;}
+	.main-wrapper .slide > .content > .brand >img {max-width: 60%; transition: all 1s;}
+	.main-wrapper .slide > .content button {border: 1px solid #333; background-color: transparent; padding: 0.5em 2em; font-size: 1.125rem; outline: none;	font-family: inherit;} 
+
+	
+
+/******************** .link-wrapper ********************/
+	.link-wrapper {}
+	.link-wrapper .link-wrap {margin: 1.5em 0;}
+	.link-wrapper .link-wrap:first-child {width: 100%; margin-left: 0}
+	.link-wrapper .link-wrap:last-child {width: 100%; margin-left: 0}
+	.link-wrapper .link-wrap:first-child > li {width: 100%; margin: 1% 0;}
+	.link-wrapper .link-wrap:last-child > li {width: 100%; margin: 1% 0;}
+	.link-wrapper .link-wrap > li {float: left; background-color: #000;}
+	.link-wrapper .link-wrap > li img {transition: all .75s; opacity: .9;}
+	.link-wrapper .link-wrap > li:hover img {opacity: 1;}
+	
+
+	/******************** .best-wrapper ********************/
+	.best-wrapper {text-align: center;}
+.best-wrapper > .title-wrapper {padding-top: 3.5em;}
+.best-wrapper > .slide-wrapper {margin-top: 1.5em; padding-bottom: 120px;}
+.best-wrapper > .slide-wrapper {position: relative;}
+.best-wrapper > .slide-wrapper .bt {position: absolute; top: 150px; font-size: 4em; color: #999; cursor: pointer; outline: none;}
+.best-wrapper > .slide-wrapper .bt:hover {color: #444;}
+.best-wrapper > .slide-wrapper .bt.bt-prev {left: 0;}
+.best-wrapper > .slide-wrapper .bt.bt-next {right: 0;}
+
+
+.best-wrapper > .slide-wrapper > .slide-stage {width: calc(100% - 100px); margin: auto; height: 356px;}
+.best-wrapper > .slide-wrapper .slide {border: 1px solid #ccc;}
+/*
+.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap {height: 100%;}
+.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap > .slide {float: left; width: 100%; height: 100%; border: 1px solid #ccc;}
+*/
+.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap > .slide > li {height: 280px; display: table; width: 100%;}
+.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap > .slide > li > div {display: table-cell; vertical-align: middle;}
+.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap > .slide > div {height: 74px; padding-top: .5em;}
+.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap > .slide > div > .best-title {font-size: 1.125em; color: #333; line-height: 1.75;}
+.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap > .slide > div > .best-cont {color: #777;}
+
+	
+		/******************** 반응형 ********************/
+	@media (min-width: 576px){
+		
+	}
+
+	@media (min-width: 768px){
+		.wrapper {padding: 0 1rem;}
+		.wrapper2 {padding: 0 1rem;}
+	
+		.link-wrapper .link-wrap:first-child {width: 101%; margin-left: -0.5%;}
+		.link-wrapper .link-wrap:last-child {width: 102%; margin-left: -1%;}
+		.link-wrapper .link-wrap:first-child > li {width: 32.3333%; margin: 0.25% .5%;}
+		.link-wrapper .link-wrap:last-child > li {width: 48%; margin: 0.25% 1%;}
+		/*
+		.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap {width: 102%;} 
+		.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap > .slide {float: left; width: 48%; margin-right: 2%;}
+		*/ 
+		
+	}
+
+	@media (min-width: 992px){
+		.wrapper {padding: 0 2rem;}
+	.wrapper2 {padding: 0 2rem;}
+	.navi-wrapper2 .icon-wrap > .icon {float: left; margin: 0.625em;}
+	.navi-wrapper2 .icon-wrap img {margin-right: 0.5em; width: auto;}
+	.navi-wrapper2 .icon-wrap span {margin-right: 0.5em;}
+
+	.main-wrapper .slide > .content {font-size: 1.875em;}
+	.main-wrapper .slide > .content > .slogan > br {display: none;} 
+	.main-wrapper .slide > .content > .brand > img {max-width: 80%;} 
+
+	.best-wrapper > .title-wrapper {background-image: url('../img/bestseller_bg_top.jpg'); background-repeat: no-repeat; background-position: right bottom;}
+	.best-wrapper > .slide-wrapper {background-image: url('../img/bestseller_bg_bottom.jpg'); background-repeat: no-repeat; background-position: left bottom;}
+
+	
+	}
+	@media (min-width: 1200px){
+	}
+
+	@media (min-width: 1400px){
+		.top-wrapper {display: block;}
+		.navi-wrapper {padding-top: 0;}
+		.navi-wrapper .mb-navi-wrap {display: none;}
+		.navi-wrapper .navi-wrap {display: block;}
+		.main-wrapper .slide > .content {font-size: 2.125em;}
+		.main-wrapper .slide > .content > .brand > img {max-width: 100%;}
+		.best-wrapper > .title-wrapper {background-position: right 15% bottom;}
+		.best-wrapper > .slide-wrapper {background-position: left 20% bottom;}
+		/*
+		.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap {width: 101%;} 
+		.best-wrapper > .slide-wrapper > .slide-stage > .slide-wrap > .slide {float: left; width: 24%; margin-right: 1%;}
+		*/
+
+	}
+
+	@media (min-width: 1600px){
+	}
+
+
+
+	/* 
+SCSS문법
+.header-wrapper {
+	.top-wrapper {
+		ul.top-wrap {
+			li {
+				float: left; color: #f8f8f8;
+				&:nth-child(2) {margin: 0 12px; opacity: .5;}
+			}
+		}
+	}
+} 
+*/
