--- a/CSS/03.16.LG.css
+++ b/CSS/03.16.LG.css
@@ -1,12 +1,12 @@
 @import './lge-font.css';
 
 html, body {font-family: 'LGSmHaR'; font-size: 14px; letter-spacing: -1px;}
-.wrapper {max-width: 1600px; margin: auto; padding: 0 2rem; }
-.wrapper2 {max-width: 1300px; margin: auto; padding: 0 2rem;}
+.wrapper {max-width: 1600px; margin: auto; padding: 0 0.5rem; }
+.wrapper2 {max-width: 1300px; margin: auto; padding: 0 0.5rem;}
 
 .disp_table {display: table;}
 .disp_cell {display: table-cell; text-align: center; vertical-align: middle;}
-
+.angle_rt::after {content: '＞'; display: inline-block;}
 /************************** .header_wrapper *******************************/
 .header_wrapper{}
 	.top_wrapper {background-color: #333; padding: 1.5em 0  0.625em 0;}
@@ -23,7 +23,7 @@ html, body {font-family: 'LGSmHaR'; font-size: 14px; letter-spacing: -1px;}
 			.navi_wrapper .navi {float: left; padding: 0.875em 0.75em 1.75em 0.75em; height: 63px;}
 		.navi_wrapper .navi_wrap > .navi:hover { background-color: #ccc;}
 		.navi_wrapper .navi_wrap > .navi:hover > a {color: #333;}
-		.navi_wrapper .navi:hover > .sub_wrapper {z-index: 2; height: 320px;}
+		.navi_wrapper .navi:hover > .sub_wrapper {z-index: 2; height: 300px;}
 		.navi_wrapper .navi:last-child > span {opacity: .5;}
 
 		.sub_wrapper {position: absolute; top: 63px; left: 0; width: 100%; height: 0; background-image: linear-gradient(#ccc, #f1f1f1); transition: height 0.35s; overflow: hidden; z-index: 1; box-shadow: 0 6px 6px rgba(0, 0, 0, .6);}
@@ -59,25 +59,62 @@ html, body {font-family: 'LGSmHaR'; font-size: 14px; letter-spacing: -1px;}
 		.sub_wrapper .sub_prd > ul > .prd {font-size: 1.05em; color: #121212; float: left;}
 		.sub_wrapper .sub_prd > ul > .prd::before {display: inline-block; content: '·'; padding: 0 0.25em 0 0.75em;}
 
-		.navi_wrapper2 {background-color: #ae1a4a;}
+		.navi_wrapper2 {background-color: #ae1a4a; color: #f9f9f9;}
+		.navi_wrapper2 .icon_wrap {float: right; text-align: center;}
+		.navi_wrapper2 .icon_wrap > .icon {display: inline-block; height: 32px; line-height: 32px; margin: 0.325em;}
+		.navi_wrapper2 .icon_wrap > .icon:nth-child(4) {margin-right: 1em;}
+		.navi_wrapper2 .icon_wrap img {vertical-align: middle; margin-right: 0.25em; width: 20px; }
+		.navi_wrapper2 .icon_wrap span {font-weight: bold; margin-right: 0.25em;}
+
+/************************** .main_wrapper *******************************/
+.main_wrapper {}
+	.main_wrapper .slide { padding: 10% 15% 25% 15%; position: relative; background-size: cover; background-repeat: no-repeat; background-position: 70% center;}
+	.main_wrapper .slide:nth-child(1) {background-image: url('../img/main01.jpg');}
+	.main_wrapper .slide:nth-child(2) {background-image: url('../img/main02.jpg');}
+	.main_wrapper .slide:nth-child(3) {background-image: url('../img/main03.jpg');}
+	.main_wrapper .slide > .content { font-size: 1.5em;}
+	.main_wrapper .slide > .content > .slogan { padding: 1em 0; transition: all 1s;}
+	.main_wrapper .slide > .content > .slogan > br {display: block;}
+	.main_wrapper .slide > .content > .brand {padding-bottom: 1em; transition: all 1s; line-height: 1.25;}
+	.main_wrapper .slide > .content > .brand > img {max-width: 60%; transition: all 1s;}
+	.main_wrapper .slide > .content button {border: 1px solid #333; background-color: transparent; padding: 0.5em 2em; font-size: 1.125rem; outline: none;} 
+
+
+
 
 		
 /************************** 반응형 *******************************/
 @media (min-width: 576px){
 	
 }
-@media (min-width: 764px){
-
+@media (min-width: 768px){
+	.wrapper { padding: 0 1rem; }
+	.wrapper2 {padding: 0 1rem;}
+	.main_wrapper .slide { padding: 8% 12% 12% 12%; background-position: center;}
 }
 @media (min-width: 992px){
+	.wrapper {padding: 0 2rem; }
+	.wrapper2 {padding: 0 2rem;}
+	.navi_wrapper2 .icon_wrap > .icon {float: left; margin: 0.625em;}
+	.navi_wrapper2 .icon_wrap img {margin-right: 0.5em; width: auto; }
+	.navi_wrapper2 .icon_wrap span {margin-right: 0.5em;}
 
+	.main_wrapper .slide > .content {font-size: 1.875em;}
+	.main_wrapper .slide > .content > .slogan > br {display: none;}
+	.main_wrapper .slide > .content > .brand > img {max-width: 80%;}
+	
+		
 }
 @media (min-width: 1200px){
 
 }
 @media (min-width: 1400px){
+	
 	.navi_wrapper .navi_wrap {display: block;}
 	.navi_wrapper .mb_navi_wrap {display: none;} 
+	.main_wrapper .slide { padding: 6% 12% 16% 12%;}
+	.main_wrapper .slide > .content {font-size: 2.125em;}
+	.main_wrapper .slide > .content > .brand > img {max-width: 100%;}
 }
 @media (min-width: 1600px){
 
