--- a/public/css/index.css
+++ b/public/css/index.css
@@ -48,8 +48,8 @@ html, body {font-family: 'LGSmHaR'; font-size: 14px; letter-spacing: -1px;}
 	.header_wrapper .navi_wrapper .mb_navi_wrap > a {margin-left: 0.5em; vertical-align: middle;}
 	.header_wrapper .navi_wrapper .mb_navi_wrap > a:not(:last-child) {font-size: 0.75em;}
 	.header_wrapper .navi_wrapper .navi {float: left; padding: 0.875em 0.75em 1.75em 0.75em; height: 63px;}
-	.header_wrapper .navi_wrapper .navi_wrap > .navi:hover { background-color: #ccc;}
-	.header_wrapper .navi_wrapper .navi_wrap > .navi:hover > a {color: #333;}
+	.header_wrapper .navi_wrapper .navi_wrap > .navi:hover:not(:nth-child(11)) { background-color: #ccc;}
+	.header_wrapper .navi_wrapper .navi_wrap > .navi:hover:not(:nth-child(11)) > a {color: #333;}
 	.header_wrapper .navi_wrapper .navi:hover > .sub_wrapper {z-index: 2; height: 380px;}
 	.header_wrapper .navi_wrapper .navi:last-child > span {opacity: .5;}
 
