--- a/public/css/index.css
+++ b/public/css/index.css
@@ -40,7 +40,7 @@ html, body {font-family: 'LGSmHaR'; font-size: 14px; letter-spacing: -1px;}
 	.top_wrapper ul.top_wrap li:nth-child(2) { margin: 0 0.875em; opacity: .5;}
 
 	.header_wrapper .navi_wrapper {background-color: #333; position: relative; z-index: 3;padding-top: 0.75em;}
-	.header_wrapper .navi_wrapper .logo { width: 164px; height: 43px; float:left; background:url('../img/Common.png'); }
+	.header_wrapper .navi_wrapper .logo { width: 164px; height: 43px; float:left; background:url('../img/common.png'); }
 	.header_wrapper .navi_wrapper .logo a {display: inline-block; width: 100%; height:100%}
 	/* a 태그는 inline width와 height를 가질 수 없다.*/
 	.header_wrapper .navi_wrapper .navi_wrap {float: right; color: #f8f8f8; font-size: 1.25rem; display: none;}
